fix render issue / fix dashboard layout bug / add more fields & tab in new zoning

--- a/resources/sass/partials/_components.scss
+++ b/resources/sass/partials/_components.scss
@@ -1,4 +1,14 @@
-.ant-layout-content {
+#layout-content.ant-layout-content {
+
+	margin-top: 24px;
+	margin-bottom: 24px;
+	margin-right: 16px;
+	margin-left: 218px;
+	padding: 24px;
+	background: #fff;
+	min-height: 94.8vh;
+	height: 100%;
+	overflow: initial;
 
 	#components-grid {
 
