--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -3,8 +3,8 @@
 // DASHBOARD CSS
 
 #dashboard-layout {
-	height: 100%;
-	height: -webkit-fill-available;
+	// height: 100%;
+	// height: -webkit-fill-available;
 
 	.ant-menu-item,
 	.ant-menu-submenu-title {
